RESOLVED FIXED186988
CSSGradientValue's color stops vector wastes 12KB on theverge.com
https://bugs.webkit.org/show_bug.cgi?id=186988
Summary CSSGradientValue's color stops vector wastes 12KB on theverge.com
Simon Fraser (smfr)
Reported 2018-06-24 21:18:55 PDT
CSSGradientValue's color stops vector wastes 12KB on theverge.com
Attachments
Patch (2.81 KB, patch)
2018-06-24 21:19 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-06-24 21:19:50 PDT
WebKit Commit Bot
Comment 2 2018-06-26 20:03:57 PDT
Comment on attachment 343482 [details] Patch Clearing flags on attachment: 343482 Committed r233241: <https://trac.webkit.org/changeset/233241>
WebKit Commit Bot
Comment 3 2018-06-26 20:03:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-06-26 20:04:19 PDT
Note You need to log in before you can comment on or make changes to this bug.