CSSGradientValue's color stops vector wastes 12KB on theverge.com https://bugs.webkit.org/show_bug.cgi?id=186988

Reviewed by Sam Weinig.

Shrink the color stops vector when we're done parsing the stops.

* css/CSSGradientValue.h:
(WebCore::CSSGradientValue::doneAddingStops):
* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeDeprecatedGradient):
(WebCore::CSSPropertyParserHelpers::consumeGradientColorStops):
(WebCore::CSSPropertyParserHelpers::consumeAngularGradientColorStops):


Canonical link: https://commits.webkit.org/202330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233241 268f45cc-cd09-0410-ab3c-d52691b4dbfc